sign in button align fixed;

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -55,6 +55,7 @@ body,html {
 }
 .btn-area{
     margin-top: -10px;
+    text-align: center;
     /*padding-bottom: 50px;*/
 }
 .btn{
